# prior-mail-backend

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  20260611_1040_initial_schema.py
docs_local/: BACKEND_INTEGRATION_GUIDE.md  BACKEND_REFACTOR.md
src/priormail/: __init__.py  main.py
src/priormail/agents/: __init__.py  classify.py  extract_tasks.py  graph.py  parse_eml.py  phishing.py  preprocess.py  state.py  summarize.py
src/priormail/api/: __init__.py  analyze.py  auth.py  classify.py  emails.py  health.py  phishing.py  sync_router.py
src/priormail/core/: __init__.py  config.py  deps.py  errors.py  logging.py
src/priormail/models/: __init__.py  priority.py
src/priormail/models/orm/: audit_log.py  db.py  email.py  prioritization.py  task.py  user.py
src/priormail/models/schemas/: analysis.py  auth.py  envelope.py  phishing.py
src/priormail/services/: __init__.py  classifier.py  gmail_client.py  llm_client.py  phishing.py  phishing_inference.py  preprocess.py  sync.py
src/priormail/workers/: __init__.py
tests/: conftest.py
tests/fixtures/: sample.eml
tests/integration/: __init__.py  test_analyze_api.py  test_auth_api.py  test_classify_api.py  test_emails_api.py  test_sync_api.py
tests/unit/: __init__.py  test_classifier.py  test_classify_node.py  test_config.py  test_db_models.py  test_deps.py  test_extract_tasks_node.py  test_parse_eml.py  test_phishing_node.py  test_preprocess.py  test_preprocess_node.py  test_schemas.py  test_summarize_node.py
