# ─────────────────────────────────────────────────────────────
# pyproject.toml — PriorMail Backend
# Managed with uv (not pip directly)
# ─────────────────────────────────────────────────────────────

[project]
name = "priormail"
version = "0.1.0"
description = "PriorMail Backend — AI-powered email prioritization with Gmail integration"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # --- Web & API ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",

    # --- Data ---
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",             # async Postgres driver
    "alembic>=1.13",

    # --- Auth & External ---
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "supabase>=2.0",
    "python-jose[cryptography]>=3.3",  # JWT handling

    # --- AI Orchestration ---
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "transformers>=4.40",
    "torch>=2.0",
    "huggingface-hub>=0.23",     # snapshot_download for HF-hosted checkpoints

    # --- Observability ---
    "structlog>=24.0",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/priormail"]

# --- Ruff (linter + formatter) ---
[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["priormail"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query() in argument defaults is the intended pattern.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
# FastAPI evaluates endpoint/dependency annotations at runtime (e.g. Request,
# the injected Classifier type), so those imports must stay outside a
# TYPE_CHECKING block — exempt them from the type-checking-import rules.
"src/priormail/api/*.py" = ["TC001", "TC002"]
"src/priormail/core/deps.py" = ["TC001", "TC002"]

# --- Mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

# Third-party libraries without type stubs.
[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "huggingface_hub.*",
    "google.*",
    "google_auth_oauthlib.*",
    "googleapiclient.*",
    "jose.*",
]
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
